[Mac] Fix three-finger swipe breakage by adding TWC to responder chain.

The recent change to separate TabWindowController from
NSWindowController also removed it from the responder chain. As a result
messages like swipeWithEvent: no longer reached the
BrowserWindowController BWC. This cl reinserts the TabWindowController
into the responder chain, before the window's NSWindowController.

Bug: 805241
Change-Id: Ifa46d3e66ad306f26d860fe196f445e76fe293a4
Reviewed-on: https://chromium-review.googlesource.com/887326
Commit-Queue: Jayson Adams <shrike@chromium.org>
Reviewed-by: Robert Sesek <rsesek@chromium.org>
Cr-Commit-Position: refs/heads/master@{#532466}