chrome/browser/ui/cocoa/tabs/tab_window_controller.h
@@ -14,7 +14,8 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 // to fill in the details.
 // Note that under the hood the TabWindowController is neither an
 // NSWindowController nor its window's delegate, though it receives all
-// NSWindowDelegate methods as if it were.
+// NSWindowDelegate methods as if it were. It also resides in the responder
+// chain.
 
 #import <Cocoa/Cocoa.h>
 
@@ -27,7 +28,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 @class TabStripView;
 @class TabView;
 
-@interface TabWindowController : NSObject<NSWindowDelegate> {
+@interface TabWindowController : NSResponder<NSWindowDelegate> {
  @private
   // Wrapper view around web content, and the developer tools view.
   base::scoped_nsobject<FastResizeView> tabContentArea_;
